--- a/_posts/2020-05-08-bfs.md
+++ b/_posts/2020-05-08-bfs.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      "宽度优先搜索"
+title:      "宽度优先遍历"
 subtitle:   " \"条条大路通罗马\""
 date:       2020-05-08 12:00:00
 author:     "LiuJ"
-header-img: "img/post-bg-2020.jpg"
+header-img: "img/post-bg-algorithm.jpg"
 catalog: true
 tags:
-    - 宽度优先搜索
+    - 宽度优先遍历
     - 算法
 ---
 
