--- a/_posts/2020-08-12-day4-01.07-09.md
+++ b/_posts/2020-08-12-day4-01.07-09.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "DAY4-程序员面试金典01.07-08"
-subtitle:   " \"模拟\""
+title:      "DAY4-程序员面试金典01.07-09"
+subtitle:   " \"模拟、字符串\""
 date:       2020-08-12 11:00:00
 author:     "LiuJ"
 header-img: "img/post-bg-algorithm.jpg"
@@ -276,3 +276,54 @@ class Solution:
             for i in range(m):
                 matrix[i][0] = 0
 ```
+
+## [01.09-字符串轮转](https://leetcode-cn.com/problems/string-rotation-lcci/)
+
+### 1. 题意
+
+字符串轮转。给定两个字符串`s1`和`s2`，请编写代码检查`s2`是否为`s1`旋转而成（比如，`waterbottle`是`erbottlewat`旋转后的字符串）。
+
+### 2. 思路
+
+自身拼接一次后其旋转字符一定出现在其中。
+
+- 时间复杂度：$O(n^2)$。
+- 空间复杂度：$O(1)$。
+
+### 3. 代码
+
+#### cpp
+
+```cpp
+class Solution {
+public:
+    bool isFlipedString(string s1, string s2) {
+        if (s1.size() != s2.size()) {
+            return false;
+        }
+        return (s1 + s1).find(s2) != -1;
+    }
+};
+```
+
+#### java
+
+```java
+class Solution {
+    public boolean isFlipedString(String s1, String s2) {
+        if (s1.length() != s2.length()) {
+            return false;
+        }
+        return (s1 + s1).indexOf(s2) != -1;
+    }
+}
+```
+
+#### python
+
+```python
+class Solution:
+    def isFlipedString(self, s1: str, s2: str) -> bool:
+        return len(s1) == len(s2) and s1 in s2 * 2
+```
+
